mid pricer + tiered pricing